--- a/package.json
+++ b/package.json
@@ -1,22 +1,62 @@
 {
-  "name": "startup",
-  "version": "0.1.0",
-  "private": true,
-  "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start",
-    "lint": "next lint"
-  },
-  "dependencies": {
-    "@types/node": "18.15.11",
-    "@types/react": "18.0.37",
-    "@types/react-dom": "18.0.11",
-    "eslint": "8.38.0",
-    "eslint-config-next": "13.3.0",
-    "next": "13.3.0",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
-    "typescript": "5.0.4"
-  }
+	"name": "startup",
+	"version": "0.1.0",
+	"private": true,
+	"scripts": {
+		"dev": "next dev",
+		"build": "next build",
+		"start": "next start",
+		"lint": "next lint"
+	},
+	"dependencies": {
+		"@chakra-ui/react": "^2.5.1",
+		"@emotion/react": "^11.10.6",
+		"@emotion/styled": "^11.10.6",
+		"@fontsource/roboto": "^4.5.8",
+		"@graphcms/rich-text-react-renderer": "^0.6.1",
+		"@reduxjs/toolkit": "^1.9.3",
+		"axios": "^1.3.4",
+		"chart.js": "^4.2.1",
+		"cookie": "^0.5.0",
+		"date-fns": "^2.29.3",
+		"formik": "^2.2.9",
+		"framer-motion": "^9.0.7",
+		"graphql": "^16.6.0",
+		"graphql-request": "^5.2.0",
+		"i18next": "^22.4.10",
+		"i18next-browser-languagedetector": "^7.0.1",
+		"i18next-http-backend": "^2.1.1",
+		"js-cookie": "^3.0.1",
+		"next": "13.1.6",
+		"next-auth": "^4.21.0",
+		"nprogress": "^0.2.0",
+		"react": "18.2.0",
+		"react-chartjs-2": "^5.2.0",
+		"react-dom": "18.2.0",
+		"react-drag-drop-files": "^2.3.9",
+		"react-hydration-provider": "^1.0.2",
+		"react-i18next": "^12.2.0",
+		"react-icons": "^4.7.1",
+		"react-multi-carousel": "^2.8.2",
+		"react-quill": "^2.0.0",
+		"react-redux": "^8.0.5",
+		"react-speech-kit": "^3.0.1",
+		"react-stars": "^2.2.5",
+		"react-tag-input-component": "^2.0.2",
+		"yup": "^1.0.2"
+	},
+	"devDependencies": {
+		"@types/cookie": "^0.5.1",
+		"@types/js-cookie": "^3.0.3",
+		"@types/node": "18.15.11",
+		"@types/nprogress": "^0.2.0",
+		"@types/react": "18.0.37",
+		"@types/react-dom": "18.0.11",
+		"@types/react-stars": "^2.2.1",
+		"@typescript-eslint/eslint-plugin": "^5.53.0",
+		"@typescript-eslint/parser": "^5.53.0",
+		"eslint": "8.34.0",
+		"eslint-config-next": "13.1.6",
+		"typescript": "5.0.4"
+	}
 }
